Revision history for Perl extension Fl

{{$NEXT}}

    - New widgets:
        - Fl::Tabs - "File card tabs" interface
        - Fl::Output - Simple text display widget
    - New demo script: eg/tabs.pl

0.99.10 2016-06-04T00:08:58Z

    - New widgets:
        - Fl::Scrollbar - Slider with arrow buttons at either end
        - Fl::Slider - Contains a sliding knob inside a box
        - Fl::FillSlider - Filled Vertical Slider. Useful as a progress or value meter
        - Fl::HorFillSlider - Fl::FillSlider but horizontal
        - Fl::NiceSlider - Fl::Slider with an easy grab handle
        - Fl::HorNiceSlider - Fl::NiceSlider but horizontal
        - Fl::HorSlider - Horizontal Fl::Slider
        - Fl::ValueSlider - Slider widget that displays the current value
        - Fl::HorValueSlider - Horizontal Fl::ValueSlider

0.99.9 2016-05-19T01:11:29Z

    - Fix index count when there are optional arguments in generated code

0.99.8 2016-05-18T18:33:34Z

    - New widgets:
        - Fl::Counter - Controls a single floating point value with button (or keyboard) arrows
        - Fl::SimpleCounter - Fl::Counter with only two buttons
        - Fl::Dial - Circular dial to control a single floating point value
        - Fl::FillDial - Fl::Dial with a filled arc
        - Fl::LineDial - Fl::Dial with a single line to mark the current value
        - Fl::Roller - '3D' dial to control a floating point value
        - Fl::ValueOutput - Read-only display of floating point value
        - Fl::ValueInput - Displays a floating point value the user can modify

0.99.7 2016-05-18T00:20:32Z

    - Fix refcount related crash on super sensitive *nix glibc

0.99.6 2016-05-17T16:16:32Z

    - New widgets:
        - Fl::Input - single line text input widget
        - Fl::SecretInput - input widget with hidden text (password fields, etc.)
        - Fl::FloatInput - limits users to type only floating point numbers
        - Fl::IntInput - limits users to type only decimal digits and hex values